# MSB

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/actions/setup/: action.yml
.github/workflows/: build.yml
backend/: Cargo.toml
backend/proto/: input.proto
backend/src/: array.rs  buff.rs  database.rs  debug.rs  detect.rs  ecs.rs  lib.rs  mat.rs  minimap.rs  notification.rs  operation.rs  pathing.rs  rng.rs  rotator.rs  run.rs  skill.rs  task.rs  utils.rs
backend/src/bridge/: convert.rs  mod.rs
backend/src/grpc/: input.rs  mod.rs  service.rs
backend/src/models/: actions.rs  keys.rs  localization.rs  map.rs  mod.rs  seeds.rs
backend/src/player/: adjust.rs  cash_shop.rs  double_jump.rs  exchange_booster.rs  fall.rs  familiars_swap.rs  grapple.rs  idle.rs  jump.rs  mod.rs  moving.rs  panic.rs  solve_rune.rs  solve_shape.rs  solve_violetta.rs  stall.rs  state.rs  timeout.rs  unstuck.rs  up_jump.rs  use_booster.rs  use_key.rs
backend/src/services/: capture.rs  database.rs  input.rs  localization.rs  map.rs  operation.rs  rotator.rs  settings.rs  world.rs
backend/src/solvers/: mod.rs  rune.rs  shape.rs  violetta.rs
backend/src/tracker/: bytetracker.rs  kalman_filter.rs  mod.rs  strack.rs
docs/: customize_input.md  general.md  remote_control.md  troubleshooting.md
examples/python/: arduino_example.py  input_pb2.py  input_pb2.pyi  input_pb2_grpc.py  kmbox_example.py  pywinauto_example.py
ui/: .gitignore  Cargo.toml  Dioxus.toml  build.rs
ui/assets/: tailwind.css
ui/src/: debug.rs  localization.rs  main.rs
ui/src/actions/: inner.rs  (+5 more)
(+12 files in other folders)
